--- a/테이블스페이스만들기.md
+++ b/테이블스페이스만들기.md
@@ -1,4 +1,4 @@
-﻿--테이블 스페이스 만들기
+### 테이블 스페이스 만들기
 
 create tablespace 테이블 스페이스 이름
                datafile '데이터 파일 경로'
@@ -14,7 +14,7 @@ create tablespace madang
 
 drop tablespace madang;
           
--- 사용자 계정 만들기
+### 사용자 계정 만들기
 
 create user 아이디 identified by 비밀번호
 default tablespace 테이블스페이스이름;
@@ -22,7 +22,7 @@ default tablespace 테이블스페이스이름;
 create user madang identified by madang 
 default tablespace madang;
 
--- 권한 부여하기
+### 권한 부여하기
 
 grant 권한리스트 to 아이디;
 참고
@@ -31,13 +31,14 @@ resource : 자원을 사용할 수 있는 권한
 dba: db 관리자 권한
 
 -- create table synatx:
+```
 CREATE TABLE table_name (
   column_1 data_type(길이) not null,
   column_2 data_type,
   ...
 );
-
-
+```
+```
 CREATE TABLE book(
     bookid            number not null,
     bookname       varchar2(50) not null,
@@ -47,7 +48,7 @@ CREATE TABLE book(
 FOREIGN KEY (외래키속성명) REFERENCES 테이블이름(속성이름)
 EX) FOREIGN KEY custid REFERENCES customer(custid)
 );
-
+```
 *(괄호안)
 constraint : 제약조건
 
