--- a/테이블스페이스만들기.md
+++ b/테이블스페이스만들기.md
@@ -1,17 +1,18 @@
 ### 테이블 스페이스 만들기
-
+```
+## ex)
 create tablespace 테이블 스페이스 이름
                datafile '데이터 파일 경로'
                     size 초기 사이즈
 autoextend on next 자동증가 사이즈
               maxsize 최대사이즈;
-
+## 응용)
 create tablespace madang
           datafile 'd:\HongGilDong\madang.dbf' 
           size 50M
           autoextend on next 10M 
           maxsize unlimited;
-
+```
 drop tablespace madang;
           
 ### 사용자 계정 만들기
@@ -53,39 +54,41 @@ EX) FOREIGN KEY custid REFERENCES customer(custid)
 constraint : 제약조건
 
 
- INSER 구문
- INSERT INTO tablename
- VALUES(값 리스트);
+### INSERT 구문
+``` 
+ ## ex)
+ INSERT INTO tablename VALUES(값 리스트);
  
  
  INSERT INTO book VALUES(1,'레미제라블', '대한출판사', 14000);
--- book뒤에 컬럼 들어감
+# book뒤에 컬럼 들어감
 
 INSERT INTO book(bookid, bookname, publisher)
              VALUES(2, '장발장', '한빛');
-
--- 수정하는법
-
+```
+# 수정하는법
 UPDATE book
 SET price = 20000
 WHERE bookid = 2;
 
--- 삭제하는법(컬럼)
+# 삭제하는법(컬럼)
 DELETE FROM book;
 
--- 특정 조건을 주어서 삭제하는 법.
+# 특정 조건을 주어서 삭제하는 법.
 DELETE FROM book
 WHERE bookid = 2;
 
--- 되돌리는법(커밋이 완료되면 되지않음.)
+# 되돌리는법(커밋이 완료되면 되지않음.)
 ROLLBACK;
-*커밋은 전체적인 명령어를 사용후 완벽히 적용 시키는 것을 말함.
+<<* 커밋은 전체적인 명령어를 사용후 완벽히 적용 시키는 것을 말함.
 
--- 테이블 삭제법
+# 테이블 삭제법
 DROP TABLE book;
 
 
--- 테이블 생성
+### 테이블 생성
+# ex)
+```
 CREATE TABLE ....(
 
  FRIMARY key (주키속성명);
@@ -97,10 +100,11 @@ CREATE TABLE orders(
      custid number(3),
      ....
      FOREIGN KEY custid REFERENCES customer(custid),
-
-SET AUTO OFF; 롤백을 사용 하려면 해야함
-SET AUTO ON; 으로 되있으면 안됨
-COMMIT; (저장기능 같은것)커밋을 한 후에 롤백을 사용하면 안먹힘.
-DELETE FROM CUSTOMER WHERE CUSTID = 6;
-(이거론 커밋했어도 삭제가능)
-ROLLBACK; 뒤로가기 같은 기능
+```
+## 기능 및 내용
+ < SET AUTO OFF; 롤백을 사용 하려면 해야함
+ < SET AUTO ON; 으로 되있으면 안됨
+ < COMMIT; (저장기능 같은것)커밋을 한 후에 롤백을 사용하면 안먹힘.
+ < DELETE FROM CUSTOMER WHERE CUSTID = 6;
+ < (이거론 커밋했어도 삭제가능)
+ < ROLLBACK; 뒤로가기 같은 기능
