--- a/테이블스페이스만들기.md
+++ b/테이블스페이스만들기.md
@@ -66,27 +66,27 @@ constraint : 제약조건
 INSERT INTO book(bookid, bookname, publisher)
              VALUES(2, '장발장', '한빛');
 ```
-# 수정하는법
-UPDATE book
-SET price = 20000
-WHERE bookid = 2;
+## 수정하는법
+# UPDATE book
+# SET price = 20000
+# WHERE bookid = 2;
 
-# 삭제하는법(컬럼)
-DELETE FROM book;
+## 삭제하는법(컬럼)
+# DELETE FROM book;
 
-# 특정 조건을 주어서 삭제하는 법.
-DELETE FROM book
-WHERE bookid = 2;
+## 특정 조건을 주어서 삭제하는 법.
+# DELETE FROM book
+# WHERE bookid = 2;
 
-# 되돌리는법(커밋이 완료되면 되지않음.)
-ROLLBACK;
-<<* 커밋은 전체적인 명령어를 사용후 완벽히 적용 시키는 것을 말함.
+## 되돌리는법(커밋이 완료되면 되지않음.)
+# ROLLBACK;
+# <<* 커밋은 전체적인 명령어를 사용후 완벽히 적용 시키는 것을 말함.
 
-# 테이블 삭제법
-DROP TABLE book;
+## 테이블 삭제법
+# DROP TABLE book;
 
 
-### 테이블 생성
+## 테이블 생성
 # ex)
 ```
 CREATE TABLE ....(
@@ -101,7 +101,7 @@ CREATE TABLE orders(
      ....
      FOREIGN KEY custid REFERENCES customer(custid),
 ```
-## 기능 및 내용
+# 기능 및 내용
  < SET AUTO OFF; 롤백을 사용 하려면 해야함
  < SET AUTO ON; 으로 되있으면 안됨
  < COMMIT; (저장기능 같은것)커밋을 한 후에 롤백을 사용하면 안먹힘.
