--- a/테이블스페이스만들기.md
+++ b/테이블스페이스만들기.md
@@ -103,8 +103,11 @@ ROLLBACK;
 ```
 # 기능 및 내용
   SET AUTO OFF; 롤백을 사용 하려면 해야함
+  
   SET AUTO ON; 으로 되있으면 안됨
+  
   COMMIT; (저장기능 같은것)커밋을 한 후에 롤백을 사용하면 안먹힘.
-  DELETE FROM CUSTOMER WHERE CUSTID = 6;
-  (이거론 커밋했어도 삭제가능)
+  
+  DELETE FROM CUSTOMER WHERE CUSTID = 6; < (커밋했어도 삭제가능)
+  
   ROLLBACK; 뒤로가기 같은 기능
