Update 테이블스페이스,사용자 계정 만들기.md

--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -1,6 +1,6 @@
 ﻿## 테이블 스페이스, 사용자 계정 만들기
 
-# SYSTEM 관리자로 들어가는 방법.
+ SYSTEM 관리자로 들어가는 방법.
 
 처음에는 만들기 위해 system관리자로 들어가야 한다.
 들어가는 경로부터 파악해보자.
@@ -26,7 +26,6 @@
 < 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
 
 ex)
-
   < 1. 입력란에 sqlplus system/비밀번호를 입력한다.
 
   < 2. 입력란에 sqlplus / as sysdba를 입력한다.
@@ -73,7 +72,7 @@ madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 
 
 최대사이즈는 unlimited 이다" 라고 해석하면 된다.
 
-# 주의사항)
+ 주의사항)
 
 < 1. 여기서 최대사이즈 옆에 ;를 입력하지않으면 만들어지지 않으니 꼭 확인하길 바란다.
 
@@ -83,7 +82,7 @@ madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 
 
 
 
-# 사용자 계정만들기
+ 사용자 계정만들기
 
 관리자 계정으로는 사용자 계정을 만들 수 가 있다.
 
@@ -102,14 +101,13 @@ DEFAULT TALBESPACE madang;
 
 ex)
 ```
-
 CREATE USER 아이디 identified by 비번
 DEFAULT TALBESPACE 테이블스페이스이름;
 ```
 
 
 
-# 사용자 권한 부여
+ 사용자 권한 부여
 
 사용자 권한 부여를 하지않으면 만들어진 사용자 계정으로 아무것도 할 수 없다.
 
@@ -128,7 +126,6 @@ DEFAULT TALBESPACE 테이블스페이스이름;
 이렇게 있다.
 
 ex)
-
 ```
 grant connect, resource, dba to madnag;
 ```
