--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -1,29 +1,32 @@
 ﻿## 테이블 스페이스, 사용자 계정 만들기
+﻿### 테이블 스페이스, 사용자 계정 만들기
 
- SYSTEM 관리자로 들어가는 방법.
+ 
+
+# SYSTEM 관리자로 들어가는 방법.
 
 처음에는 만들기 위해 system관리자로 들어가야 한다.
 들어가는 경로부터 파악해보자.
 
-< 1) 윈도우+R 버튼을 누르면 실행창이 뜬다.
+ < 1) 윈도우+R 버튼을 누르면 실행창이 뜬다.
 
-< 2) 실행창에 cmd를 입력하면 프로그램이 뜬다.
+ < 2) 실행창에 cmd를 입력하면 프로그램이 뜬다.
 
-< 3) 입력창에 sqlplus를 치게되면 버전이 뜨면서 다시 입력란이 뜨게된다.
+ < 3) 입력창에 sqlplus를 치게되면 버전이 뜨면서 다시 입력란이 뜨게된다.
 
-< 4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.(system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
+ < 4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.(system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
 
-< 5) 비번 입력란에 자신이 설정해 놓은 비밀번호를 입력한다.
+ < 5) 비번 입력란에 자신이 설정해 놓은 비밀번호를 입력한다.
 
-< (주의사항_ 비밀번호 입력은 커서만 깜빡이며 입력한문자가 들어가지 않으므로 당황하지 말자.)
+ < (주의사항_ 비밀번호 입력은 커서만 깜빡이며 입력한문자가 들어가지 않으므로 당황하지 말자.)
 
 
 
 * tip
 
-< 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
+ < 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
 
-< 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
+ < 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
 
 ex)
   < 1. 입력란에 sqlplus system/비밀번호를 입력한다.
@@ -74,15 +77,15 @@ madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 
 
  주의사항)
 
-< 1. 여기서 최대사이즈 옆에 ;를 입력하지않으면 만들어지지 않으니 꼭 확인하길 바란다.
+ < 1. 여기서 최대사이즈 옆에 ;를 입력하지않으면 만들어지지 않으니 꼭 확인하길 바란다.
 
-< 2. 저같은 경우는 경로를 복붙하여 뻘짓하였음. 그러므로 경로가 c드라이브인지 d드라이브인지 꼭 파악하자.!!
+ < 2. 저같은 경우는 경로를 복붙하여 뻘짓하였음. 그러므로 경로가 c드라이브인지 d드라이브인지 꼭 파악하자.!!
 
 이렇게 테이블 스페이스를 만들었다!!
 
 
 
- 사용자 계정만들기
+# 사용자 계정만들기
 
 관리자 계정으로는 사용자 계정을 만들 수 가 있다.
 
@@ -107,7 +110,7 @@ DEFAULT TALBESPACE 테이블스페이스이름;
 
 
 
- 사용자 권한 부여
+# 사용자 권한 부여
 
 사용자 권한 부여를 하지않으면 만들어진 사용자 계정으로 아무것도 할 수 없다.
 
