--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -1,9 +1,9 @@
 ﻿## 테이블 스페이스, 사용자 계정 만들기
-﻿### 테이블 스페이스, 사용자 계정 만들기
+﻿# 테이블 스페이스, 사용자 계정 만들기
 
  
 
-# SYSTEM 관리자로 들어가는 방법.
+### SYSTEM 관리자로 들어가는 방법.
 
 처음에는 만들기 위해 system관리자로 들어가야 한다.
 들어가는 경로부터 파악해보자.
@@ -40,7 +40,8 @@ ex)
 
 
 
-# 테이블 만들기.
+
+### 테이블 만들기.
 
 이제 테이블을 만들어보자.
 
@@ -85,7 +86,8 @@ madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 
 
 
 
-# 사용자 계정만들기
+
+### 사용자 계정만들기
 
 관리자 계정으로는 사용자 계정을 만들 수 가 있다.
 
@@ -110,7 +112,7 @@ DEFAULT TALBESPACE 테이블스페이스이름;
 
 
 
-# 사용자 권한 부여
+### 사용자 권한 부여
 
 사용자 권한 부여를 하지않으면 만들어진 사용자 계정으로 아무것도 할 수 없다.
 
