Update 테이블스페이스,사용자 계정 만들기.md

--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -31,14 +31,14 @@
 
 * tip
 
- > 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
+     > 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
 
- > 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
+     > 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
 
 ex)
-  > 1. 입력란에 sqlplus system/비밀번호를 입력한다.
+     > 1. 입력란에 sqlplus system/비밀번호를 입력한다.
 
-  > 2. 입력란에 sqlplus / as sysdba를 입력한다.
+     > 2. 입력란에 sqlplus / as sysdba를 입력한다.
 
 
 (제컴퓨터 경우는 sysdba계정이 들어가지지가 않는다.
@@ -53,7 +53,7 @@ ex)
 
 
 
-# 테이블 만들기.
+- 테이블 만들기.
 
 이제 테이블을 만들어보자.
 
