--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -1,5 +1,5 @@
 ﻿## 테이블 스페이스, 사용자 계정 만들기
-﻿ #### 테이블 스페이스, 사용자 계정 만들기
+﻿
 
 
 
@@ -10,7 +10,7 @@
 
  
 
-# SYSTEM 관리자로 들어가는 방법.
+* SYSTEM 관리자로 들어가는 방법.
 
 처음에는 만들기 위해 system관리자로 들어가야 한다.
 들어가는 경로부터 파악해보자.
@@ -29,11 +29,11 @@
 
 
 
-* tip
+- tip
 
-     > 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
+         > 시스템 계정으로 들어가는 방법이 한가지만 있는 것이 아니기에 
 
-     > 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
+         > 2가지 방법을 더 사용해서 자기가 편한 접속 방법을 택한다.
 
 ex)
      > 1. 입력란에 sqlplus system/비밀번호를 입력한다.
@@ -53,7 +53,7 @@ ex)
 
 
 
-- 테이블 만들기.
+* 테이블 만들기.
 
 이제 테이블을 만들어보자.
 
@@ -104,7 +104,7 @@ madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 
 
 
 
-# 사용자 계정만들기
+* 사용자 계정만들기
 
 관리자 계정으로는 사용자 계정을 만들 수 가 있다.
 
@@ -136,7 +136,7 @@ DEFAULT TALBESPACE 테이블스페이스이름;
 
 
 
-# 사용자 권한 부여
+* 사용자 권한 부여
 
 사용자 권한 부여를 하지않으면 만들어진 사용자 계정으로 아무것도 할 수 없다.
 
