--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -15,17 +15,17 @@
        처음에는 만들기 위해 system관리자로 들어가야 한다.
        들어가는 경로부터 파악해보자.
 
-         > 1) 윈도우+R 버튼을 누르면 실행창이 뜬다.
+          1) 윈도우+R 버튼을 누르면 실행창이 뜬다.
 
-         > 2) 실행창에 cmd를 입력하면 프로그램이 뜬다.
+          2) 실행창에 cmd를 입력하면 프로그램이 뜬다.
 
-         > 3) 입력창에 sqlplus를 치게되면 버전이 뜨면서 다시 입력란이 뜨게된다.
+          3) 입력창에 sqlplus를 치게되면 버전이 뜨면서 다시 입력란이 뜨게된다.
 
-         > 4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.(system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
+          4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.(system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
 
-         > 5) 비번 입력란에 자신이 설정해 놓은 비밀번호를 입력한다.
+          5) 비번 입력란에 자신이 설정해 놓은 비밀번호를 입력한다.
 
-         > (주의사항_ 비밀번호 입력은 커서만 깜빡이며 입력한문자가 들어가지 않으므로 당황하지 말자.)
+          (주의사항_ 비밀번호 입력은 커서만 깜빡이며 입력한문자가 들어가지 않으므로 당황하지 말자.)
 
 
 
@@ -54,8 +54,7 @@ ex)
 
 
 * 테이블 만들기.
-
-     이제 테이블을 만들어보자.
+     
 
      시스템 계정으로 접속되있는 상황에 입력란에 
 
@@ -82,11 +81,11 @@ create tablespace madang
    ```
 
 
-"나는 madang 이라는 테이블 스페이를 만들것이고, 데이터 파일 경로를 
+('나는 madang 이라는 테이블 스페이를 만들것이고, 데이터 파일 경로를 
 
 madnag경로를 이용할 것이고, 초기 사이즈는 50이며, 자동증가 사이즈는 10,
 
-최대사이즈는 unlimited 이다" 라고 해석하면 된다.
+최대사이즈는 unlimited 이다" 라고 해석하면 된다.)
 
  주의사항)
 
