Update 테이블스페이스,사용자 계정 만들기.md

--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -21,7 +21,8 @@
 
           3) 입력창에 sqlplus를 치게되면 버전이 뜨면서 다시 입력란이 뜨게된다.
 
-          4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.(system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
+          4) 그러면 아이디를 치는 입력란이 나오게 된다 여기에 system을 입력.
+            (system은 아이디이며 관리자로 지금 설정되어있기 때문이다.)
 
           5) 비번 입력란에 자신이 설정해 놓은 비밀번호를 입력한다.
 
