Update 테이블스페이스,사용자 계정 만들기.md

--- a/테이블스페이스,사용자 계정 만들기.md
+++ b/테이블스페이스,사용자 계정 만들기.md
@@ -42,9 +42,7 @@ ex)
        2. 입력란에 sqlplus / as sysdba를 입력한다.
 
 
-(제컴퓨터 경우는 sysdba계정이 들어가지지가 않는다.
-
-그래서 system계정으로 하였다. 참고하시길...)
+(제컴퓨터 경우는 sysdba계정이 들어가지지가 않는다. 그래서 system계정으로 하였다. 참고하시길...)
 
 
 
