Update 테이블 생성, 컬럼 내용 기입 하기.md

--- a/테이블 생성, 컬럼 내용 기입 하기.md
+++ b/테이블 생성, 컬럼 내용 기입 하기.md
@@ -39,25 +39,25 @@ CREATE TABLE orders (
 
 내가 알고 있는 무결성 제약 조건으로는 NOT NULL, UNIQUE, PRIMARY KEY, FOREIGN KEY, CHECK이 있다.
 
-NOT NULL이란 '필수 입력 사항'을 의미한다. 쉽게말해 내가 null값이라는 것을 허용 할 것인지, 아닌지에 대한 여부를 묻는것이다.
+1) NOT NULL이란 '필수 입력 사항'을 의미한다. 쉽게말해 내가 null값이라는 것을 허용 할 것인지, 아닌지에 대한 여부를 묻는것이다.
 
-UNIQUE란 중복성 배제이다. 그말은 컬럼 속성내용에 중복된 내용이 들어가면 안되고 유일한 값으로 존재해야 한다는 것이다.
+2) UNIQUE란 중복성 배제이다. 그말은 컬럼 속성내용에 중복된 내용이 들어가면 안되고 유일한 값으로 존재해야 한다는 것이다.
 
-PRIMARY KEY란 기본키라고도 불리며 NOT NULL과 UNIQUE를 합친것이라고 생각하면된다. 기본적으로 PRIMARY KEY는
+3) PRIMARY KEY란 기본키라고도 불리며 NOT NULL과 UNIQUE를 합친것이라고 생각하면된다. 기본적으로 PRIMARY KEY는
 
 테이블에서 대표되는 컬럼에 제약조건을 건다.
 
-FOREIGN KEY란 외래키라고도 불리며 '참조하는 테이블에서 존재하는 값만 사용 가능'을 의미한다.
+4) FOREIGN KEY란 외래키라고도 불리며 '참조하는 테이블에서 존재하는 값만 사용 가능'을 의미한다.
 
-CHECK란 '주어진 조건에 해당하는 값만 입력 가능'을 의미한다.
+5) CHECK란 '주어진 조건에 해당하는 값만 입력 가능'을 의미한다.
 
 이 왜에 위와 같이 REFRENCES는 참조하라는 뜻이다.
 
 쉽게말해서 custid NUMBER(2) REFERENCES customer(custid)를 해석하면
 
-cusid는 2자리 숫자이며 customer테이블의(custid)과 관계가 있도록 만든것이다.
+"cusid는 2자리 숫자이며 customer테이블의(custid)과 관계가 있도록 만든것이다.
 
-관계가 있다는 말은 두개의 테이블에 서로 공동으로 들어가는 컬럼이 있다. 라고 생각하면 된다. 
+관계가 있다는 말은 두개의 테이블에 서로 공동으로 들어가는 컬럼이 있다." 라고 생각하면 된다. 
 
 자 이렇게 테이블을 만들었다!!
 
@@ -72,6 +72,7 @@ ex)
 
 INSERT INTO orders VALUES(1, 1, 1, 6000, TO_DATE('2014-07-01', 'yyyy-mm-dd'));
 
+```
 컬럼내용1에는 1이라는 값
 
 컬럼내용2에는 1이라는 값
@@ -83,6 +84,7 @@ INSERT INTO orders VALUES(1, 1, 1, 6000, TO_DATE('2014-07-01', 'yyyy-mm-dd'));
 컬럼내용5에는 2014-07-01라는 값
 
 을 이야기한다.
+```
 
 이렇게 테이블 생성과 컬럼 속성 내용을 넣어 보는 것까지 하였다.
 
